# core/internal/api/nodes.go
@@ -105,7 +105,7 @@ func (ro Role) allows(r *http.Request) bool {
 	case RoleAdmin:
 		return true
 	case RoleTroubleshooter:
-		if r.Method == http.MethodPost && r.URL.Path == "/api/v1/operations/acknowledgements" {
+		if r.Method == http.MethodPost && (r.URL.Path == "/api/v1/operations/acknowledgements" || r.URL.Path == "/api/v1/operations/handling") {
 			return true
 		}
 		return r.Method == http.MethodGet
